--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,15 +1,38 @@
 <hr>
 
 <div class="new-version-header">
-    Version 0.9.4 (04/27/2010)
+    Version 0.9.4 (05/03/2010)
 </div>
 <hr>
+
+<div class="new-version-header">
+    <b>New Features</b>
+</div>
+
+<ul class="new-version-list">
+    <li>Stored Searches
+
+        <ul class="new-version-list">
+            <li>Save your favorite searches for quick access to your music.</li>
+
+	    <li>Tap and Hold Search from the main menu for quick access.</li>
+	    
+            <li>Searches are stored per account.</li>
+
+            <li>Some searches can be date limited. Including Artists, Albums and Songs</li>
+
+            <li>Tap Icon to Edit, Swipe to Delete, Hold to Reorder</li>
+	    
+        </ul>
+    </li>
+ </ul>
 
 <div class="new-version-header">
     <b>Improvements</b>
 
     <ul class="new-version-list">
-	<li>Video Search</li>
+	<li>Video Search, added video search to search options.</li>
+	<li>Added no items found message for empty search results.</li>
     </ul>
 </div>
 
@@ -19,5 +42,8 @@
 
 <ul class="new-version-list">
     <li>Type to search in video scene broken.</li>
-    <li>Banner notications didn't show up when in app but away from now playing screen.</li>
+    <li>Banner notifications didn't show up when in app but away from now playing screen.</li>
+    <li>Extended stall detection timer to 30 secs, was 20</li>
+    <li>On/Off preferences weren't being saved correctly</li>
+    <li>Paused now playing didn't show current time</li>
 </ul>
