--- a/trunk/src/app/views/new-users/new-users-scene.html
+++ b/trunk/src/app/views/new-users/new-users-scene.html
@@ -67,6 +67,8 @@
 			<br>
 			Tap and Hold Recent in the main menu to quickly find recently added songs. Note: This is configurable in the preferences menu.<br>
 			<br>
+			Tap and Hold Search in the main menu to bring up Saved Searches.<br>
+			<br>
 			<strong>Playlists</strong>
 			<hr>
 			Playlists need to be created on your server to be used by Ampache Mobile.<br>
