--- a/trunk/src/app/views/search-builder/search-builder-scene.html
+++ b/trunk/src/app/views/search-builder/search-builder-scene.html
@@ -85,7 +85,7 @@
 								Date
 							</div>
 
-							<div id="FromDate"></div>
+							<div id="FromDate">Tap to Pick Date</div>
 					</div>
 				</div>
                 
