--- a/src/app/views/songs/songs-scene.html
+++ b/src/app/views/songs/songs-scene.html
@@ -39,5 +39,15 @@
     </div>
     
     <div id="thick-border" class="thick-bottom-border" style="display:block;"></div>
-    <div id="songsList" x-mojo-element="FilterList"></div>
+    
+    <div id="listContainer" style=" width:100%;top: 110px; bottom: 0px; position:fixed;" >
+	
+	<div style="height:100%;" x-mojo-element="Scroller">
+		<div x-mojo-element="FilterList" id="songsList"">
+		</div>
+	</div>
+	
+    </div>
+    
+    <!--<div id="songsList" x-mojo-element="FilterList"></div>-->
 </div>
