--- a/trunk/src/app/views/account/account-scene.html
+++ b/trunk/src/app/views/account/account-scene.html
@@ -76,6 +76,9 @@
                 </div>
             </div>
         </div>
+    
+        <div x-mojo-element="Button" id="btnAccountHelp"></div>
+        
     </div>
 
     <div id="extra-settings">
