--- a/trunk/src/app/views/new-users/new-users-scene.html
+++ b/trunk/src/app/views/new-users/new-users-scene.html
@@ -123,7 +123,7 @@
 		</div>
 	</div>
 
-	<div class="palm-group">
+	<div id="account" class="palm-group">
 		<div class="palm-group-title" x-mojo-loc="x-mojo-loc">
 			Account Editor
 		</div>
@@ -131,11 +131,11 @@
 		<div style="margin: 0px" class="palm-body-text condensed" x-mojo-loc="x-mojo-loc">
 			<strong>Account Name</strong>
 			<hr>
-			This is the name which will show up on the login screen.<br>
+			This is the name which will show up on the login screen.  It is for display purposes only.<br>
 			<br>
 			<strong>URL</strong>
 			<hr>
-			Internet address of the server you are attempting to connect to.<br>
+			Internet address of the server you are attempting to connect to.  If you haven't yet setup a server please go to the <a href='http://code.google.com/p/ampache-mobile/#Setup'>Ampache Mobile</a> site for more information.<br>
 			<br>
 			<b>NOTE:</b> This is the same address you would put into a web browser to access your server from the internet.<br>
 			<br>
