--- a/trunk/src/app/views/whatsnew/new-version.html
+++ b/trunk/src/app/views/whatsnew/new-version.html
@@ -1,7 +1,7 @@
 <hr>
 
 <div class="new-version-header">
-    Version 0.9.4 (05/03/2010)
+    Version 0.9.5 (05/xx/2010)
 </div>
 <hr>
 
@@ -10,18 +10,11 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Stored Searches
+    <li>Dashboard?
 
         <ul class="new-version-list">
-            <li>Save your favorite searches for quick access to your music.</li>
+            <li></li>
 
-	    <li>Tap and Hold Search from the main menu for quick access.</li>
-	    
-            <li>Searches are stored per account.</li>
-
-            <li>Some searches can be date limited. Including Artists, Albums and Songs</li>
-
-            <li>Tap Icon to Edit, Swipe to Delete, Hold to Reorder</li>
 	    
         </ul>
     </li>
@@ -31,8 +24,7 @@
     <b>Improvements</b>
 
     <ul class="new-version-list">
-	<li>Video Search, added video search to search options.</li>
-	<li>Added no items found message for empty search results.</li>
+	<li>Navigation in App Menu, Jump to the Home and Search Screens from any Screen</li>
     </ul>
 </div>
 
@@ -41,9 +33,5 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Type to search in video scene broken.</li>
-    <li>Banner notifications didn't show up when in app but away from now playing screen.</li>
-    <li>Extended stall detection timer to 30 secs, was 20</li>
-    <li>On/Off preferences weren't being saved correctly</li>
-    <li>Paused now playing didn't show current time</li>
+    <li>None yet</li>
 </ul>
