--- a/trunk/src/app/views/account/account-scene.html
+++ b/trunk/src/app/views/account/account-scene.html
@@ -130,20 +130,25 @@
                     </div>
                 </div>
 
-                <div class="palm-row last" x-mojo-tap-highlight="momentary">
+                <div class="palm-row last">
                     <div class="palm-row-wrapper">
                         
 
                         <div id="slider" x-mojo-element="Slider"></div><!--<table class="palm-list-section-label"></table>-->
                         <table>
                             <tr>
-                                <td class="label" width=65%>List Fetch Size</td>
+                                <td class="label" width=65%><strong>List Fetch Size</strong></td>
                                 <td class="label" id="fetchSize" width=35%>Items:</td>
                                
                             </tr>
+                            <!--<tr>-->
+                            <!--    <td  colspan=2 class="label" width=100%>-->
+                            <!--    NOTE: Size-->
+                            <!--    </td>-->
+                            <!--</tr>-->
                         </table>
-                    
-                    
+                        
+                        
                     </div>
                 </div>
             </div>
