--- a/trunk/src/app/views/albums/albums-scene.html
+++ b/trunk/src/app/views/albums/albums-scene.html
@@ -43,13 +43,11 @@
     
 
     
-    <div id="listContainer" style=" width:100%;top: 110px; bottom: 0px; position:fixed;" >
-	
+    <div id="listContainer" class="listContainer" >
 	<div style="height:100%;" x-mojo-element="Scroller">
 		<div x-mojo-element="FilterList" id="albumsFilterList"">
 		</div>
 	</div>
-	
     </div>
 
     <div id="albumsFilterListNoHeader" x-mojo-element="FilterList">
