--- a/trunk/src/app/views/songs/songs-scene.html
+++ b/trunk/src/app/views/songs/songs-scene.html
@@ -40,10 +40,10 @@
     
     <div id="thick-border" class="thick-bottom-border" style="display:block;"></div>
     
-    <div id="listContainer" style=" width:100%;top: 110px; bottom: 0px; position:fixed;" >
+    <div class="listContainer" id="listContainer"  >
 	
 	<div style="height:100%;" x-mojo-element="Scroller">
-		<div x-mojo-element="FilterList" id="songsList"">
+		<div x-mojo-element="FilterList" id="songsList">
 		</div>
 	</div>
 	
