--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,30 +1,33 @@
 <hr>
 
 <div class="new-version-header">
-    Version 0.9.5 (05/xx/2010)
+    Version 0.9.5 (05/11/2010)
 </div>
 <hr>
 
-<div class="new-version-header">
-    <b>New Features</b>
-</div>
-
-<ul class="new-version-list">
-    <li>Dashboard?
-
-        <ul class="new-version-list">
-            <li></li>
-
-	    
-        </ul>
-    </li>
- </ul>
+<!--<div class="new-version-header">-->
+<!--    <b>New Features</b>-->
+<!--</div>-->
+<!---->
+<!--<ul class="new-version-list">-->
+<!--    <li>Dashboard?-->
+<!---->
+<!--        <ul class="new-version-list">-->
+<!--            <li></li>-->
+<!---->
+<!--	    -->
+<!--        </ul>-->
+<!--    </li>-->
+<!-- </ul>-->
 
 <div class="new-version-header">
     <b>Improvements</b>
 
     <ul class="new-version-list">
 	<li>Navigation in App Menu, Jump to the Home and Search Screens from any Screen</li>
+	<li>'Shuffle All' stays at the top of lists, no more scrolling back up for it.</li>
+	<li>Will prompt to restart music if you navigate away while paused, happens all the time when I get calls</li>
+	<li>Added Grab more items from Random lists</li>
     </ul>
 </div>
 
@@ -33,5 +36,5 @@
 </div>
 
 <ul class="new-version-list">
-    <li>None yet</li>
+    <li>Banner Notifications showing up while App in focus</li>
 </ul>
