--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -37,4 +37,5 @@
 
 <ul class="new-version-list">
     <li>Banner Notifications showing up while App in focus</li>
+    <li>Stall detection always off</li>
 </ul>
