--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1402,6 +1402,17 @@ margin-left:10px;
 {
    margin-top:5px;
    margin-bottom:5px;
+
+  height: 48px;
+  width: auto;
+  max-width: 320px;
+  overflow: hidden;
+  -webkit-border-image: url(../images/dashboard.png) 0 12 0 12 repeat stretch;
+  -webkit-box-sizing: border-box;
+  vertical-align: middle;
+  border-width: 0px 12px 0px 12px;
+  font-size: 16px;
+  
    
 }
 
@@ -1436,6 +1447,13 @@ margin-left:10px;
     
     top: 0px;
     left:62px;
+    
+}
+
+
+#ampache-dashboard .songInfo:active
+{
+   background-color: #67f807;
 }
 
 #ampache-dashboard #albumArt
