--- a/trunk/src/app/views/NowPlayingDashboard/NowPlayingDashboard-scene.html
+++ b/trunk/src/app/views/NowPlayingDashboard/NowPlayingDashboard-scene.html
@@ -1,10 +1,10 @@
-<div id="ampache-dashboard" class="palm-dashboard-text-container " style="width: 100%;">
+<div id="ampache-dashboard" style="width: 100%;">
 	
 	<img id="albumArt" style="width: 48px; height: 48px;" src="images/blankalbum.png"/>
 	
-	<div class="songInfo  text-info" id="viewTitle">
+	<div class="songInfo  text-info" id="viewTitle"   x-mojo-touch-feedback="immediate" x-mojo-popup-content="">
 		<div id="artist" class="truncating-text" >Artist</div>
-		<div id="album"  class="truncating-text">Song</div>
+		<div id="album"  class="truncating-text">Album</div>
 		<div id="song"  class="truncating-text">Song</div>
 		
 	</div>
