--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,33 +1,33 @@
 <hr>
 
 <div class="new-version-header">
-    Version 0.9.5 (05/11/2010)
+    Version 0.9.5 (05/24/2010)
 </div>
 <hr>
 
-<!--<div class="new-version-header">-->
-<!--    <b>New Features</b>-->
-<!--</div>-->
-<!---->
-<!--<ul class="new-version-list">-->
-<!--    <li>Dashboard?-->
-<!---->
-<!--        <ul class="new-version-list">-->
-<!--            <li></li>-->
-<!---->
-<!--	    -->
-<!--        </ul>-->
-<!--    </li>-->
-<!-- </ul>-->
+<div class="new-version-header">
+    <b>New Features</b>
+</div>
+
+<ul class="new-version-list">
+    <li>Dashboard
+
+        <ul class="new-version-list">
+            <li>Displays current track, art and buffering info</li>
+	    <li>Previous, Play, Pause and Next</li>
+	    <li>Tap art or song info to return to app</li>
+	    <li>Controls available from locked screen</li>
+	    
+	    
+        </ul>
+    </li>
+ </ul>
 
 <div class="new-version-header">
     <b>Improvements</b>
 
     <ul class="new-version-list">
-	<li>Navigation in App Menu, Jump to the Home and Search Screens from any Screen</li>
-	<li>'Shuffle All' stays at the top of lists, no more scrolling back up for it.</li>
-	<li>Will prompt to restart music if you navigate away while paused, happens all the time when I get calls</li>
-	<li>Added Grab more items from Random lists</li>
+	<li>None</li>
     </ul>
 </div>
 
@@ -36,6 +36,6 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Banner Notifications showing up while App in focus</li>
-    <li>Stall detection always off</li>
+    <li>Filtering songs and albums lists caused text overlap</li>
+    <li>Stall detection tweaked furthur, less false positives</li>
 </ul>
