--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,7 +1,7 @@
 <hr>
 
 <div class="new-version-header">
-    Version 0.9.5 (05/24/2010)
+    Version 0.9.6 (05/29/2010)
 </div>
 <hr>
 
@@ -17,8 +17,6 @@
 	    <li>Previous, Play, Pause and Next</li>
 	    <li>Tap art or song info to return to app</li>
 	    <li>Controls available from locked screen</li>
-	    
-	    
         </ul>
     </li>
  </ul>
@@ -27,7 +25,8 @@
     <b>Improvements</b>
 
     <ul class="new-version-list">
-	<li>None</li>
+	<li>Button to close release notes</li>
+	<li>Saved search now a button on the header in the search screen</li>
     </ul>
 </div>
 
